--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,13 +1,25 @@
-/* -------homepage.css---------- */
 /* -------about.css---------- */
 .about-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-areas:
+      "my-story my-story"
+      "take-a-look contact-me";
     gap: 2rem;
     padding: 2rem;
   }
   
-  .about-item {
+  #my-story {
+    grid-area: my-story;
+    text-align: center;
+  }
+  
+  #take-a-look {
+    grid-area: take-a-look;
+    text-align: center;
+  }
+  
+  #contact-me {
+    grid-area: contact-me;
     text-align: center;
   }
   
@@ -15,7 +27,6 @@
     color: #0073e6;
     margin: 0 1rem;
     text-decoration: none; /* Remove underline */
-    padding-right: 1rem;
   }
   
   .about-item a:hover {
@@ -25,7 +36,10 @@
   /* Responsive Design */
   @media (max-width: 768px) {
     .about-grid {
-      grid-template-columns: 1fr;
+      grid-template-areas:
+        "my-story"
+        "take-a-look"
+        "contact-me";
     }
   }
     /* ----------------- */
