--- a/src/css/cv.css
+++ b/src/css/cv.css
@@ -21,12 +21,12 @@
 /* Remove underline from links and add hover effect */
 a {
   text-decoration: none;
-  color: #0073e6;
+  color: #28a745; /* Primary green color */
   transition: color 0.3s ease;
 }
 
 a:hover {
-  color: #005bb5;
+  color: #5cb85c; /* Light green hover color */
 }
 /* ----------------- */
 /* Modal styles */
