--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -50,5 +50,6 @@
     width: 90%; /* Make the repo div narrower on very narrow screens */
     max-width: 300px; /* Ensure it doesn't exceed 300px */
     margin: 0 auto; /* Center the repo div and remove additional margin */
+    margin-bottom: 0.2;
   }
 }
