--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -6,12 +6,13 @@
   border-radius: 5px;
   display: flex;
   align-items: center;
-  background-color: #333333; /* Dark gray background for repo div */
+  background-color: #263d2b; /* Dark gray background for repo div */
   color: #ffffff; /* White text color */
   width: 100%; /* Adjust width as needed */
   max-width: 600px; /* Set a maximum width */
   margin-left: auto;
   margin-right: auto;
+  box-shadow: 0 4px 8px rgba(30, 126, 52, 0.5); /* Add shadow effect with dark green*/
 }
 
 .repo img {
