--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -6,7 +6,8 @@
   border-radius: 5px;
   display: flex;
   align-items: center;
-  background-color: #263d2b; /* Dark gray background for repo div */
+  background-color: #2c362e; /* Dark gray background for repo div */
+  /*background: #2f4e36; /* Dark green background */
   /*background-color: #232c25;  Dark gray background for repo div */
   width: 100%; /* Adjust width as needed */
   max-width: 600px; /* Set a maximum width */
