colors and font

--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -32,7 +32,7 @@
 
 .repo div {
   flex: 1;
-  font-family: 'Source Code Pro', monospace; /* Font for links */
+  font-family: 'Source Code Pro', monospace;
 }
 
 /* Responsive Design */
