--- a/src/css/about.css
+++ b/src/css/about.css
@@ -11,7 +11,8 @@
 #my-story {
     grid-area: my-story;
     text-align: center;
-    padding: 4rem;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
 }
 
 #take-a-look {
