--- a/src/css/about.css
+++ b/src/css/about.css
@@ -13,6 +13,27 @@
     text-align: center;
     padding-top: 4rem;
     padding-bottom: 4rem;
+    margin: 0 auto;
+    max-width: 800px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: #161a17;
+}
+
+#my-story h2 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+
+#my-story p {
+    max-width: 800px; /* Reduced max-width for narrower paragraphs */
+    font-size: 1rem;
+    line-height: 1.6;
+    margin-bottom: 1.6rem;
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #take-a-look {
